Restitution Sphere Model
Made a file to create the graph necessary to make the restitution risk
curve for the sphere. There is an error with the
Network_Projection_withrestitution file thought. line 192, index error.
Can you sort this out please?

--- a/Literature Review/MSCI POSTER draft.tex
+++ b/Literature Review/MSCI POSTER draft.tex
@@ -78,11 +78,11 @@ The current research revolves around three possible approaches:
 
 
 
-\section{\textbf{Kim Christensen's Model}}
+\section{\textbf{Christensen \emph{et al.'s} Model}}
 
 \subsection{Description of the model}
 
-In the publication "a Simple Model for Identifying Critical Regions in Atrial Fibrillation"~\cite{Christensen}, Prof. Christensen produced a simple 2D model for AF. The cardiac cells were arranged in a squared grid with horizontal connections, with a percentage of \textbf{ transversal connections} (to reproduce the effect of fibrosis) and a percentage of \textbf{dysfunctional cells}.
+In the publication "A Simple Model for Identifying Critical Regions in Atrial Fibrillation"~\cite{Christensen}, Prof. Christensen produced a simple 2D model for AF. The cardiac cells were arranged in a squared grid with horizontal connections, with a percentage of \textbf{ transversal connections} (to reproduce the effect of fibrosis) and a percentage of \textbf{dysfunctional cells}.
 Dysfunctional cells are excited by neighbours with a fixed probability.\\
 
 \textbf{\textit{Propagation Rules the model}}\\
@@ -120,25 +120,25 @@ The model also shows that burning the area affected by AF effectively stops the 
 
 
 
-\section{\textbf{Implementing Restitution }} 
+\begin{block}{Implementing Restitution }
 
 Even though in Prof.Christensen model, the refractory period of each muscle cell was always fixed, this is not what happens in a real heart.
 In a real heart the refractory period depends on the heart beat rate and on the last time each cell it was excited. The relationship between refractory period and heart beat rate is called restitution.
 \\
 In the first part of our project, we implemented restitution in Kim Christensen model in order
 
+\end{block}
 
 
 
-
-\section{\textbf{Kim Christensen's model on a Sphere}}
+\begin{block}{Model on a Sphere}
 
 
 
 In research by Fedotov, a cellular automaton model was constructed on the surface of a triangulated sphere to model spiral rotor waves on a closed, heterogeneous surface \cite{Fedotov}. It was shown that both a decrease in refractory period and conduction velocity from a "healthy" myocardium state, where no irregular excitation waves above 300bpm are observed, resulted in an area where spiral waves were formed. In addition, a multi-electrode system was created to study the localization of AF sources by simulated electrograms. 
 
 
-
+\end{block}
 
 
 %\section{\textbf{\underline{Conclusion}}}
